# datascience

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg
datascience/: __init__.py
datascience/codependence/: __init__.py
datascience/filter/: __init__.py  filter.py
datascience/tests/: test_filtermatrix.py
docs/source/: conf.py  index.rst
docs/source/codependence/: correlation_based_metrics.rst
docs/source/matrix_filter/: denoise.rst
notebooks/: MatrixFilter.ipynb
