[metadata]
name = datascience
version = 0.0.12
author = Ahmed Elshayeb
author_email = aelshayeb@jacobs-alumni.de
licence = MIT Licence
licence-file = LICENSE.txt
description = This lib includes a sample of my work in Quantative Financial Analysis
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
url = https://github.com/skyliquid22/datascience
project_urls =
    Source = https://github.com/skyliquid22/datascience
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial :: Investment
keywords =
    machinelearning
    finance
    investment
    education

[options]
include_package_data = True
packages = find:
python_requires =
    ~=3.6
setup_requires =
    setuptools
install_requires =
    pandas==1.0.4
    numpy==1.18.5
    scikit-learn==0.23.1
    scipy==1.4.1
    statsmodels==0.11.1
    matplotlib==3.2.1

[options.packages.find]
package_dir =
    datascience
exclude =
    notebooks
    docs
